tests/errors/cxx/h2.hpp
#pragma once

struct duplicate_definition_type {};

not_a_type not_a_type_value;
